# advent2024

./: .gitignore  CMakeLists.txt  LICENSE
day1/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  utils.cpp  utils.h
